--- a/kubernetes/blinkt-k8s-controller-ds.yaml
+++ b/kubernetes/blinkt-k8s-controller-ds.yaml
@@ -1,19 +1,20 @@
 kind: DaemonSet
 apiVersion: extensions/v1beta1
 metadata:
-  name: rpi-k8s-lights
+  name: blinkt-k8s-controller
+  namespace: kube-system
 spec:
   template:
     metadata:
       labels:
-        name: rpi-k8s-lights
+        name: blinkt-k8s-controller
     spec:
+      serviceAccountName: blinkt-k8s-controller-sa
       nodeSelector:
         deviceType: blinkt
       containers:
-      - name: rpi-k8s-lights
-        image: ikester/rpi-k8s-lights:v1
-#        imagePullPolicy: Always
+      - name: blinkt-k8s-controller
+        image: apprenda/blinkt-k8s-controller:v1
         env:
         - name: COLOR
           value: "#000B87"
