Add support for per-Pod colors from labels

--- a/kubernetes/blinkt-k8s-controller-ds.yaml
+++ b/kubernetes/blinkt-k8s-controller-ds.yaml
@@ -14,10 +14,10 @@ spec:
         deviceType: blinkt
       containers:
       - name: blinkt-k8s-controller
-        image: apprenda/blinkt-k8s-controller:v2
+        image: apprenda/blinkt-k8s-controller:v3
         env:
         - name: COLOR
-          value: "#000B87"
+          value: "000B87"
         - name: NAMESPACE
           value: default
         - name: NODE_NAME
