--- a/glide.yaml
+++ b/glide.yaml
@@ -2,3 +2,5 @@ package: github.com/apprenda/blinkt-k8s-controller
 import:
 - package: k8s.io/client-go
   version: HEAD
+- package: github.com/ikester/blinkt
+  version: HEAD
