--- a/kubernetes/blinkt-k8s-controller-ds.yaml
+++ b/kubernetes/blinkt-k8s-controller-ds.yaml
@@ -16,8 +16,10 @@ spec:
       - name: blinkt-k8s-controller
         image: apprenda/blinkt-k8s-controller:v3
         env:
-        - name: COLOR
-          value: "000B87"
+        - name: MONITOR
+          value: "pods"
+        - name: BRIGHTNESS
+          value: "0.3"
         - name: NAMESPACE
           value: default
         - name: NODE_NAME
